// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  className={undefined}
>
  😃😇🤣😁
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className={undefined}
>
  Hello Button2
</button>
`;
